dist/1.0/bin/sample/retrieveUnpackaged/objects/Lead_Attachment__c.object
<CustomObject>
    <description>Store links for files from extranet.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extranet_Url__c</fullName>
        <description>Url of Attachment in Extranet</description>
        <label>Extranet Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_address__c</fullName>
        <label>File address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Attachments</relationshipLabel>
        <relationshipName>Lead_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Store links to files from extranet</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Attachments</relationshipLabel>
        <relationshipName>Lead_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lead Attachment</label>
    <nameField>
        <displayFormat>LAT{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Attachments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>